Реализация трекера задач по ТЗ проекта №5.